fixed issue with noscript message not showing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -49,13 +49,13 @@ body {
 }
 
 .no-js {
-    background-color: var(--persian-red);
-    color: var(--tutu);
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: var(--persian-red)!important;
+    color: var(--tutu)!important;
+    height: 100vh!important;
+    width: 100vw!important;
+    display: flex!important;
+    justify-content: center!important;
+    align-items: center!important;
 }
 
 .no-js h1 {
@@ -137,26 +137,7 @@ section .btn-primary {
     margin-top: 20px;
 }
 
-section .btn-primary:hover {
-    background-color: var(--tutu);
-    color: var(--mine-shaft);
-}
 
-ul {
-    list-style: none;
-}
-
-ul li {
-    font-size: 1.2rem;
-    font-weight: 300;
-    margin-bottom: 10px;
-}
-
-ul li img {
-    width: 3.5rem;
-    height: 3.5rem;
-    margin-right: 10px;
-}
 
 .container {
     display: flex;
@@ -188,15 +169,15 @@ ul li img {
 
 .heroImage {
     background-color: var(--lightning-yellow);
-    /* background-size: cover; */
-    /* background-position: center; */
+    background-size: cover;
+    background-position: center;
     /* background-repeat: no-repeat; */
     height: 100%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    /* z-index: -1; */
+    z-index: -1;
     /* background-attachment: fixed; */
 }
 
